<resources>
    <string name="app_name">TMS</string>
    <string name="aseta">Asetukset</string>
    <string name="tieto1">Nimi:</string>
    <string name="tieto2">Paino:</string>
    <string name="kg">kg</string>
    <string name="tieto3">Pituus:</string>
    <string name="cm">cm</string>
    <string name="otsikko1">Perustiedot</string>
    <string name="otsikko2">Tavoitteet</string>
    <string name="yksikko">näytä yksikkö</string>
    <string name="tallennus">Tallenna</string>
    <string name="ohje">Jos haluat sovelluksen laskevan BMI:n, syötä painon lisäksi pituus</string>
    <string name="ohje2">Valitse ensin tavoitetyyppi ja  anna sen jälkeen haluamasi määrä</string>
    <string-array name="valinta">
        <item>"Valinta"</item>
        <item>"Kalorit"</item>
        <item>"Hiilihydraatti"</item>
        <item>"Proteiini"</item>
    </string-array>


    <!-- Ravintoaineet -->
    <string name="nykyinen_kalorit">Päivä</string>
    <string name="ateria_kalorit">Ateria</string>
    <string name="yhteensa_kalorit">Yhteensä</string>
    <string name="proteiini">Proteiini</string>
    <string name="hiilihydraatti">Hiilihydraatti</string>
    <string name="rasva">Rasva</string>
    <string name="kalorit">kcal</string>
    <string name="tyydyttynyt_rasva">Tyydyttynyt rasva</string>
    <string name="joista_sokereita">Josta sokereita</string>
    <string name="suola">Suolaa</string>
    <string name="kuitu">Kuitua</string>
    <string name="aloitus_gramma">0g</string>
    <string name="proteiini_palkkiteksti">Proteiini / 0g</string>
    <string name="hh_palkkiteksti">Hiilihydraatit / 0g</string>
    <string name="rasva_palkkiteksti">Rasva / 0g</string>
    <string name="aloitus_kalori">0</string>

    <!-- Muut merkkijonot -->
    <string name="plus">+</string>
    <string name="miinus">-</string>
    <string name="yhtakuin">=</string>
    <string name="poistu">Poistu</string>
    <string name="haku_nappi">Haku</string>
    <string name="ateria_nimi">Nimi...</string>
    <string name="tallenna_ateria">Tallenna ateria</string>
    <string name="aseta_aika">Aseta aika</string>
    <string name="kalenteri_nappi">Näytä kalenteri</string>
    <string name="hae_elintarvikkeita">Hae elintarvikkeita...</string>
    <string name="luo_ateria">Luo ateria</string>
    <string name="päivän_saanti">Päivän saanti</string>
    <string name="info">Info</string>
    <string name="muokkaa">Muokkaa</string>
    <string name="poista">Poista</string>
    <string name="jaljella">Jäljellä</string>
    <string name="siirryAsetuksiin">siirryAsetuksiin</string>
    <string name="kopioi">Kopioi</string>
    <string name="bmi">BMI:</string>
    <string name="nollaPros">0%</string>
</resources>