<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nimi"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/maaraInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/maaraInput"
        android:layout_width="61dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/maara_input"
        android:gravity="center"
        android:hint="@string/aloitus_gramma"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:maxLength="5"
        android:text="@string/aloitus_gramma"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/nimi"
        app:layout_constraintStart_toStartOf="@+id/nimi"
        app:layout_constraintTop_toBottomOf="@+id/nimi" />

    <Button
        android:id="@+id/plus"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:background="@drawable/plus_nappi_layout"
        android:text="@string/plus"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/maaraInput"
        app:layout_constraintStart_toEndOf="@+id/maaraInput"
        app:layout_constraintTop_toTopOf="@+id/maaraInput" />

    <Button
        android:id="@+id/miinus"
        android:layout_width="37dp"
        android:layout_height="38dp"
        android:background="@drawable/miinus_nappi_layout"
        android:text="@string/miinus"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/maaraInput"
        app:layout_constraintEnd_toStartOf="@+id/maaraInput"
        app:layout_constraintTop_toTopOf="@+id/maaraInput" />

    <ImageButton
        android:id="@+id/tiedot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#00000000"
        android:contentDescription="@string/info"
        android:tint="@color/valittu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lisaa"
        app:srcCompat="@drawable/info"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/lisaa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#00000000"
        android:contentDescription="@string/plus"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/tiedot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plus"
        tools:ignore="VectorDrawableCompat" />


</androidx.constraintlayout.widget.ConstraintLayout>